<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">NZ Tides</string>
    <string name="AboutString">NZTides\n\nBased on official LINZ tide predictions so should be accurate. Other transcription errors are possible but hopefully unlikely. This program shouldn\'t be used where life or property might be at risk. No Warranty.\n\nReleased under the GPLv3. See https://github.com/jevonlongdell/nztides for source code. Program copyright Jevon Longdell, tide data presumably under Crown Copyright, which is generally very permissive, see http://www.linz.govt.nz/linz-copyright.</string>
    
    <!-- Notification strings -->
    <string name="notification_channel_name">Tide Updates</string>
    <string name="notification_channel_description">Persistent notifications showing upcoming tide times</string>
    <string name="notification_action_open">Open App</string>
    <string name="notification_error_title">Tide Data Error</string>
    
    <!-- Menu items -->
    <string name="menu_notifications">Tide Notifications</string>
    <string name="menu_notification_settings">Notification Settings</string>
    
    <!-- Error messages -->
    <string name="error_reading_tide_data">Problem reading tide data. Try selecting the port again, sometimes the ports available change with an upgrade. If this doesn\'t work it is either because the tide data is out of date or you\'ve found some bug, try looking for an update.</string>
    <string name="error_future_tide_data">The first tide in this datafile doesn\'t occur until %s. The app should start working properly about then.</string>
    <string name="error_notification_permission">Notification permission is required to show tide updates. Please enable notifications in Settings.</string>
    <string name="error_calculating_tides">Unable to calculate tide information</string>
    <string name="error_updating_notification">Error updating tide notification</string>
    
    <!-- Notification settings -->
    <string name="notification_settings_title">Notification Settings</string>
    <string name="notifications_enabled">Enable tide notifications</string>
    <string name="notifications_enabled_summary">Show persistent notification with next tide information</string>
    <string name="update_frequency">Update frequency</string>
    <string name="update_frequency_summary">How often to update the notification</string>
    
    <!-- Update frequency options -->
    <string name="update_frequency_5min">Every 5 minutes</string>
    <string name="update_frequency_10min">Every 10 minutes</string>
    <string name="update_frequency_15min">Every 15 minutes</string>
    <string name="update_frequency_30min">Every 30 minutes</string>
    
</resources>
